Added tests for hudson